k8s/faulty/djangoapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: myapp
spec:
  selector:
    app: django-app
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
